cargo-features = ["edition2024"]
[package]
name = "sasppu-sys"
version = "0.1.0"
edition = "2024"

[target.xtensa-esp32s3-none-elf.dependencies]
esp-backtrace = { version = "0.15", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.23", features = ["esp32s3"] }
esp-println = { version = "0.13", features = ["esp32s3", "log"] }

[dependencies]
seq-macro = "0.3"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
