[package]
name = "sasppu_emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
minifb = "0.27"
seq-macro = "0.3"

[features]
panic_on_exqreg = []

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.release-minsize]
opt-level = "s"
inherits = "release"
